<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kiddo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="start_recording">Start recording</string>
    
    <string name="doctor">Doctor</string>
    <string name="video_camera">Doctor</string>
    <string name="kinder_kitchen">Kinder kitchen></string>
    <string name="cry_detector">Cry Detector</string>
    <string name="nannies">Nannies</string>
    <string name="forum">Forum</string>

</resources>
